--- a/startup-login-tab.html
+++ b/startup-login-tab.html
@@ -90,7 +90,7 @@
     <br>
     <div class="row">
       <div id="howto"><h1> <b>How to get started:</b></h1><br> <br></div>
-      <div class="col" id="howto1">
+      <div class="col align-self-baseline" id="howto1">
         <h1 style="text-align: start;"><b>1.</b></h1><h3><b>Register on Openai.com <br>
         or sign in with your account</b></h3>
         <img src="pngs/How to start 1.png" class="image-border">
@@ -112,18 +112,19 @@
     <br>
     <div class="row">
       <h4 style="text-align: center;"><p> Only 2 steps left and you are ready to go!</p></h4>
-      <div class="col">
+      <div class="col align-self-baseline">
         <h1 style="text-align: start;"><b>2.</b></h1><h5><p>Navigate to: <a href="https://platform.openai.com/account/api-keys">https://platform.openai.com/account/api-keys</a> <br>
         and click on "Create  new secret key"</p></h5>
         <img src="pngs/How to start 4.png" class="image-border">
       </div>
       <div class="col">
-        <img src="pngs/How to start 5.png" class="image-border">
-        <br>
         <br>
         <h1 style="text-align: start;"><b>3.</b></h1><h4><p> All that's left to do is copy and paste the key into <br>
           the StudyMateAI extension 🚀<br>
         if you have it installed just use <code>ctrl+shift+y</code></p></h5>
+        <img src="pngs/How to start 5.png" class="image-border">
+        <br>
+        <br>
       </div>
     </div> 
 </div>        
