--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col">
             <h3><p><b> Too lazy to perpare for your exercise-session?
             <br>We have you covered!</b></p></h3>
-            <img src="pngs/studym8 excercise example.png" class="image-border" >
+            <img src="pngs/studym8 excercise example.png" class="image-fluid" >
         </div>
     </div>
     <br>
@@ -57,7 +57,7 @@
         <div class="col" id="useitforany">
             <h3><p> <b> StudyMateAI may be desgined to help you study
             <br> but you can use it for almost anything!</b></p></h3> 
-            <img src="pngs/studym8 creative question example.png" class="image-border" >
+            <img src="pngs/studym8 creative question example.png" class="image-fluid" >
         </div>
     </div>
     <br>
@@ -65,7 +65,7 @@
     <div class="row">
         <div class="col">
           <h3><p> <b> Too lazy to read all of that?</b></p></h3>
-          <img src="pngs/studym8 too lazy to read all that.png" class="image-border" >
+          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid" >
         </div>
     </div>
     <br>
@@ -77,11 +77,11 @@
     <div class="row">
         <div class="col" id="flashcardsexample">
           <h3><p> <b> How about some flashcards for <br>that upcoming biology test?</b></p></h3>
-          <img src="pngs/studym8 flashcards.png" class="image-border" >
+          <img src="pngs/studym8 flashcards.png" class="image-fluid" >
         </div>
         <div class="col" id="explorefunctions">
           <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
-          <img src="pngs/studym8 explore our functions.png" class="image-border">
+          <img src="pngs/studym8 explore our functions.png" class="image-fluid">
         </div>
     </div>
     <br>
@@ -93,10 +93,10 @@
       <div class="col align-self-baseline" id="howto1">
         <h1 style="text-align: start;"><b>1.</b></h1><h3><b>Register on Openai.com <br>
         or sign in with your account</b></h3>
-        <img src="pngs/How to start 1.png" class="image-border">
+        <img src="pngs/How to start 1.png" class="image-fluid">
       </div>
       <div class="col" id="howto2">
-        <img src="pngs/How to start 2.png" class="image-border" > 
+        <img src="pngs/How to start 2.png" class="image-fluid" >
       </div>
       <div class="col">
         <h3>  <p> This process requires your email and phonenumber. <br>
@@ -115,14 +115,14 @@
       <div class="col align-self-baseline">
         <h1 style="text-align: start;"><b>2.</b></h1><h5><p>Navigate to: <a href="https://platform.openai.com/account/api-keys">https://platform.openai.com/account/api-keys</a> <br>
         and click on "Create  new secret key"</p></h5>
-        <img src="pngs/How to start 4.png" class="image-border">
+        <img src="pngs/How to start 4.png" class="image-fluid">
       </div>
       <div class="col">
         <br>
         <h1 style="text-align: start;"><b>3.</b></h1><h4><p> All that's left to do is copy and paste the key into <br>
           the StudyMateAI extension 🚀<br>
         if you have it installed just use <code>ctrl+shift+y</code></p></h5>
-        <img src="pngs/How to start 5.png" class="image-border">
+        <img src="pngs/How to start 5.png" class="image-fluid">
         <br>
         <br>
       </div>
