--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <title>studym8ai.app</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.png"/>
   <!-- Link to Bootstrap CSS -->
