--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder1</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder2</a></li>
+        <li class="nav-item"><a href="/Test1" class="nav-link px-2 text-muted">Test1</a></li>
+        <li class="nav-item"><a href="/Test2" class="nav-link px-2 text-muted">Test2</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder3</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder4</a></li>
     </ul>
