--- a/how_is_this_free.html
+++ b/how_is_this_free.html
@@ -54,10 +54,10 @@
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder1</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder2</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder3</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder4</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Placeholder1</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/tutorial" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="#" class="https://www.buymeacoffee.com/studyM8">Coffee?</a></li>
+      <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
     <p class="text-center text-muted">© 2023 Gian Hofmann, Tom Sommerfeld</p>
     <p class="text-center text-muted" id="version"></p>
