--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
-      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free.html" class="nav-link px-2 text-muted">How is this Free?</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/tutorial" class="nav-link px-2 text-muted">Tutorial</a></li>
+      <li class="nav-item"><a href="https://studym8ai.app/how_is_this_free" class="nav-link px-2 text-muted">How is this Free?</a></li>
       <li class="nav-item"><a href="https://www.buymeacoffee.com/studyM8" class="nav-link px-2 text-muted">Coffee?</a></li>
       <li class="nav-item"><a href="https://linktr.ee/studym8" class="nav-link px-2 text-muted">About</a></li>
     </ul>
