add cool anmations that help users understand

--- a/index.html
+++ b/index.html
@@ -130,8 +130,12 @@
         <br>
       </div>
     </div> 
-</div>        
+</div>     
 
+<img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
+<div class="mouse-icon">
+  <i class="fa fa-mouse-pointer"></i>
+</div>
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="https://studym8ai.app/tutorial.html" class="nav-link px-2 text-muted">Tutorial</a></li>
