--- a/tutorial.html
+++ b/tutorial.html
@@ -25,7 +25,7 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-secondary" id="difpagelink1">Home</a></li>
+                <li><a href="/" class="nav-link px-2 link-dark" id="difpagelink1">Home</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark disabled" id="difpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-secondary" id="currentpagelink">Tutorial</a></li>
                 <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark"   id="difpagelink2">How is this free?</a></li>
