change language icon

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </select>
                 -->
                 <button class="btn dropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa fa-language" id="language"></i>
+                  <img src="pngs/language-icon.png" style="width: 27px; height: 27px;">
                 </button>
                 <ul class="dropdown-menu" id="dropdownmenu">
                     <li><option class="dropdown-item" value="en">English</option></li>
