new language icon

--- a/tutorial.html
+++ b/tutorial.html
@@ -34,15 +34,9 @@
 
 
 
-            <div class="">
-                <!--
-                            <select id="language-select" class="dropdown col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 ">
-                                <option value="en">English</option>
-                                <option value="de">Deutsch</option>
-                            </select>
-                -->
+            <div>
                 <button class="btn dropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa fa-language" id="language"></i>
+                    <i id="language" class="fas fa-globe-africa"></i>
                 </button>
                 <ul class="dropdown-menu" id="dropdownmenu">
                     <li><option class="dropdown-item" value="en">English</option></li>
