--- a/download.html
+++ b/download.html
@@ -26,7 +26,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/" class="nav-link px-2 link-dark" id="difpagelink1">Home</a></li>
-                <li><a href="/tutorial.html" class="nav-link px-2 link-secondary" id="currentpagelink">Download</a></li>
+                <li><a href="/download.html" class="nav-link px-2 link-secondary" id="currentpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink">Tutorial</a></li>
                 <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark"   id="difpagelink2">How is this free?</a></li>
                 <li><a href="https://linktr.ee/studym8" class="nav-link px-2 link-dark" id="difpagelink3">About</a></li>
