add light image border css

--- a/download.html
+++ b/download.html
@@ -34,13 +34,7 @@
 
 
 
-            <div class="">
-                <!--
-                            <select id="language-select" class="dropdown col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 ">
-                                <option value="en">English</option>
-                                <option value="de">Deutsch</option>
-                            </select>
-                -->
+            <div>
                 <button class="btn dropdown" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="fa fa-language" id="language"></i>
                 </button>
@@ -76,7 +70,7 @@
         "        </div>\n" +
         "      </div>\n" +
         "      <div class=\"col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg\">\n" +
-        "          <img class=\"rounded-lg-3\" src=\"pngs/studym8 explore our functions.png\" alt=\"\" width=\"405\">\n" +
+        "          <img class=\"rounded-lg-3 image-border-light\" src=\"pngs/studym8 explore our functions.png\" alt=\"\" width=\"405\">\n" +
         "      </div>\n" +
         "    </div>\n" +
         "  </div>");
@@ -96,7 +90,7 @@
             "        </div>\n" +
             "      </div>\n" +
             "      <div class=\"col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg\">\n" +
-            "          <img class=\"rounded-lg-3\" src=\"pngs/studym8 explore our functions.png\" alt=\"\" width=\"405\">\n" +
+            "          <img class=\"rounded-lg-3 image-border-light\" src=\"pngs/studym8 explore our functions.png\" alt=\"\" width=\"405\">\n" +
             "      </div>\n" +
             "    </div>\n" +
             "  </div>");
