--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
 
             <div>
                 <button class="btn dropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa fa-language" id="language"></i>
+                    <i id="language" class="fas fa-globe-africa"></i>
                 </button>
                 <ul class="dropdown-menu" id="dropdownmenu">
                     <li><option class="dropdown-item" value="en">English</option></li>
