--- a/tutorial.html
+++ b/tutorial.html
@@ -48,8 +48,15 @@
                     <i class="fa fa-sun" aria-hidden="true" style="display: none"></i>
                 </button>
 
+                <!--
                 <button type="button" class="btn btn-outline-primary me-2">Login</button>
                 <button type="button" class="btn btn-primary">Sign-up</button>
+                -->
+                <!--
+                <button class="btn">
+                    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="studyM8" data-color="#FFDD00" data-emoji=""  data-font="Poppins" data-text="Support us" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+                </button>
+                -->
             </div>
 
         </div>
