navbar und darkmode für neue htmls

--- a/on_install.html
+++ b/on_install.html
@@ -25,7 +25,7 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-secondary" id="currentpagelink">Home</a></li>
+                <li><a href="https://studym8ai.app/" class="nav-link px-2 link-dark" id="NOcurrentpagelink">Home</a></li>
                 <li><a href="/download.html" class="nav-link px-2 link-dark" id="difpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink1">Tutorial</a></li>
                 <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark" id="difpagelink2">How is this free?</a></li>
