--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -25,10 +25,10 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-dark" id="difpagelink1">Home</a></li>
+                <li><a href="https://studym8ai.app/" class="nav-link px-2 link-dark" id="difpagelink1">Home</a></li>
                 <li><a href="/download.html" class="nav-link px-2 link-dark" id="difpagelink">Download</a></li>
                 <li><a href="/tutorial.html" class="nav-link px-2 link-dark" id="difpagelink2">Tutorial</a></li>
-                <li><a href="/how_is_this_free.html" class="nav-link px-2 link-secondary"  id="currentpagelink">How is this free?</a></li>
+                <li><a href="/how_is_this_free.html" class="nav-link px-2 link-dark"  id="NOcurrentpagelink">How is this free?</a></li>
                 <li><a href="https://linktr.ee/studym8" class="nav-link px-2 link-dark" id="difpagelink3">About</a></li>
             </ul>
 
@@ -92,7 +92,6 @@
 <script src=jquery.js></script>
 <script src="bootstrap.js"></script>
 <script src="darkmode.js"></script>
-<script src="startup-login-tab.js"></script>
 
 
 </html>
