added how free, changed tutorial.html, changed style.css

--- a/how_is_this_free.html
+++ b/how_is_this_free.html
@@ -64,26 +64,23 @@
 </header>
 
 <body>
-  <!-- Page Title -->
-  <div class="container">
-    <br>
-    <br>
-    <div><img class="logo" src="pngs/StudyMateAI-Logo.png"  style="margin: auto; display: block;" > </div>
-    <h1>StudyMateAI</h1>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
 <div class="container">
     <div class="row">
         <div class="col">
-
-            <h1><p><b>Insert How is this free Page for StudyMateAI </b></p></h1>
-          
+            <div class="px-4 py-5 my-5 text-center">
+                <img class="d-block mx-auto mb-4" src="pngs/StudyMateAI-Logo.png" alt="" width="72" height="57">
+                <h1 class="display-5 fw-bold">Zero costs</h1>
+                <div class="col-lg-6 mx-auto">
+                    <p class="lead mb-4">Thank you for your interest in our app. <br> To use our text generation service, we partner with <strong>OpenAI</strong> that provides the underlying technology. As such, we require all users to create an account with OpenAI in order to obtain their own API key, which is necessary for using our service. <br>This allows us to ensure that our users have access to the latest and most reliable technology, while also giving us the ability to provide our services for free and improve our service over time. Creating an account with OpenAI is quick, easy and most of all <strong>100% free</strong>, and allows us to provide you with a high-quality and reliable service. <br> We appreciate your understanding and look forward to helping you study.</p>
+                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                        <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="window.open('https://studym8ai.app/download.html', '_self').focus()">Download</button>
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="window.open('https://openai.com/about/', '_blank').focus()">Learn more</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-   
+</div>
 
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -99,5 +96,4 @@
 <script src=jquery.js></script>
 <script src="bootstrap.js"></script>
 <script src="darkmode.js"></script>
-
 </html>
