--- a/on_install.html
+++ b/on_install.html
@@ -132,7 +132,7 @@
         <br>
         This information is needed to verify that you are a real user. In return  you get a free 3-month trial 😎</p></h3>
         <h5><p>Don't worry you do not enter an subscription service after the free trial has ended! For
-          deatils see: <a href="https://openai.com/api/pricing/">https://openai.com/api/pricing/</a> 
+          details see: <a href="https://openai.com/api/pricing/">https://openai.com/api/pricing/</a> 
         </p></h5>
       </div>
     </div>
