--- a/on_install.html
+++ b/on_install.html
@@ -78,7 +78,7 @@
         <div class="col px-4 pt-5 my-5 text-center border-bottom">
             <h3><p><b> Too lazy to perpare for your exercise-session?
             <br>We have you covered!</b></p></h3>
-            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" >
+            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
         </div>
     </div>
 
@@ -86,25 +86,25 @@
         <div class="col px-4 pt-5 my-5 text-center border-bottom">
             <h3><p> <b> StudyMateAI may be desgined to help you study
             <br> but you can use it for almost anything!</b></p></h3> 
-            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:30%;">
+            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:30%;">
         </div>
     </div>
 
     <div class="row">
         <div class="col px-4 pt-5 my-5 text-center border-bottom">
           <h3><p> <b> Too lazy to read all of that?</b></p></h3>
-          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" >
+          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
         </div>
     </div>
 
     <div class="row">
         <div class="col px-4 pt-5 my-5 text-center border-bottom">
           <h3><p> <b> How about some flashcards for <br>that upcoming biology test?</b></p></h3>
-          <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:60%;" >
+          <img src="pngs/studym8 flashcards.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
         </div>
         <div class="col px-4 pt-5 my-5 text-center border-bottom">
           <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
-          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:60%;" >
+          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:60%;" >
         </div>
     </div>
 
@@ -113,10 +113,10 @@
       <div class="col align-self-baseline px-4 pt-5 my-5 text-center border-bottom">
         <h1 style="text-align: start;"><b>1.</b></h1><h3><b>Register on Openai.com <br>
         or sign in with your account</b></h3>
-        <img src="pngs/How to start 1.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:80%;">
+        <img src="pngs/How to start 1.png" class="image-fluid image-border img_autofit shadow-lg mb-4" style="max-width:80%;">
       </div>
       <div class="col px-4 pt-5 my-5 text-center border-bottom">
-        <img src="pngs/How to start 2.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" >
+        <img src="pngs/How to start 2.png" class="image-fluid image-border img_autofit shadow-lg mb-4" >
       </div>
       <div class="col">
         <h3>  <p> This process requires your email and phonenumber. <br>
@@ -127,7 +127,7 @@
         </p></h5>
       </div>
     </div>
-    
+
     <div class="row">
       <h4 style="text-align: center; margin-bottom: 0%;"><p> Only 2 steps left and you are ready to go!</p></h4>
       <div class="col align-self-baseline text-center border-bottom">
@@ -143,7 +143,7 @@
         <img src="pngs/How to start 5.png" class="image-fluid image-border img_autofit shadow-lg mb-4 image-border" style="max-width:60%;">
       </div>
     </div> 
-</div>     
+</div> 
 
 <img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
 <div class="mouse-icon">
