Added install link on website

--- a/download.html
+++ b/download.html
@@ -64,26 +64,20 @@
 </header>
 
 <body>
-<script>
-    if (/Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor)) {
-    document.write("<div class=\"container my-5\">\n" +
-        "    <div class=\"row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg\" style=\"background-color:#edf5ff;\" id=\'download\'>\n" +
-        "      <div class=\"col-lg-7 p-3 p-lg-5 pt-lg-3\">\n" +
-        "        <h1 class=\"display-4 fw-bold lh-1\">Download StudyMateAi for Chrome</h1>\n" +
-        "        <p class=\"lead\">Summarize texts, create flashcards, get definitions explained, and even answer questions, all with the help of an advanced language processing model. So if you want to study smarter, not harder, give StudyMateAI a try and see how it can transform the way you learn.</p>\n" +
-        "        <div class=\"d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3\">\n" +
-        "          <button type=\"button\" class=\"btn btn-primary btn-lg px-4 me-md-2 fw-bold\">Download</button>\n" +
-        "          <button type=\"button\" class=\"btn btn-outline-secondary btn-lg px-4\">Go to storepage</button>\n" +
-        "        </div>\n" +
-        "      </div>\n" +
-        "      <div class=\"col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg\">\n" +
-        "          <img class=\"rounded-lg-3 image-border-light\" src=\"pngs/studym8 explore our functions.png\" alt=\"\" width=\"405\">\n" +
-        "      </div>\n" +
-        "    </div>\n" +
-        "  </div>");
-    }
-</script>
-
+<div class="container my-5">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg" style="background-color:#edf5ff;" id='download'>
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-4 fw-bold lh-1">Download StudyMateAi for Chrome/Edge/Opera</h1>
+       <p class="lead">Summarize texts, create flashcards, get definitions explained, and even answer questions, all with the help of an advanced language processing model. So if you want to study smarter, not harder, give StudyMateAI a try and see how it can transform the way you learn.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" onclick='window.open("https://chrome.google.com/webstore/detail/studymateai/ojdbfphobphdlgloniofafojolaalnlm")'>Download</button>
+        </div>
+      </div>
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+          <img class="rounded-lg-3 image-border-light" src="pngs/studym8 explore our functions.png" alt="" width="405">
+      </div>
+    </div>
+  </div>
 <script>
     if (/Firefox/.test(navigator.userAgent)) {
         document.write("<div class=\"container my-5\">\n" +
@@ -93,7 +87,6 @@
             "        <p class=\"lead\">Summarize texts, create flashcards, get definitions explained, and even answer questions, all with the help of an advanced language processing model. So if you want to study smarter, not harder, give StudyMateAI a try and see how it can transform the way you learn.</p>\n" +
             "        <div class=\"d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3\">\n" +
             "          <button type=\"button\" class=\"btn btn-primary btn-lg px-4 me-md-2 fw-bold\">Download</button>\n" +
-            "          <button type=\"button\" class=\"btn btn-outline-secondary btn-lg px-4\">Go to storepage</button>\n" +
             "        </div>\n" +
             "      </div>\n" +
             "      <div class=\"col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg\">\n" +
