--- a/on_install.html
+++ b/on_install.html
@@ -85,8 +85,8 @@
     </div>
     <div class="col-md-5 text-c">
       <h3>Step One</h3>
-      <p>Register on <a class="clean_links" href="https://openai.com/"><b>OpenAI</b></a> or sign in with your account</p>
-      <a class="btn btn-secondary" href="https://openai.com/">Openai.com</a>
+      <p>Register on <a class="clean_links" href="https://openai.com/api/login"><b>OpenAI</b></a> or sign in with your account</p>
+      <a class="btn btn-secondary" href="https://openai.com/api/login">Openai.com</a>
     </div>
   </div>
   <!-- /.row -->
